--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <title>React App</title>
   </head>
   <body>
